openmediavault (0.4) stable; urgency=low

  * Upgrade to xmlstarlet 1.3.1.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 09 Sep 2012 01:24:21 +0200

openmediavault (0.3.0.25) stable; urgency=low

  * Fix trigger issue.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 09 Sep 2012 00:53:39 +0200

openmediavault (0.3.0.24) stable; urgency=low

  * Rename deb-trigger 'update-fileperms' to 'update-fixperms'.
  * Mantis 0000594: TFTP service doesn't work on kernels without IPv6.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 08 Sep 2012 15:46:10 +0200

openmediavault (0.3.0.23) stable; urgency=low

  * Update locales.
  * Code was modified to meet the coding guidelines.
  * Display hostname in page title.
  * Fix bug in OMVConfigEngine class.
  * Mantis 0000581: Add deb-triggers 'update-locale' and 'update-fileperms'
    to replace omv_install_locale and omv_install_fixperms in postinst
    scripts.
  * Mantis 0000582: Plugins page fails completely if dependencies for one
    plugin are missing.
  * Mantis 0000583: Live CPU load display doesn't work on ARM. Thanks to
    Stefan Seidel for the patch.
  * Mantis 0000585: Russian translation error.
  * Mantis 0000593: Broken links on the support page.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 25 Aug 2012 14:31:47 +0200

openmediavault (0.3.0.22) stable; urgency=low

  * Update locales.
  * Code cleanup.
  * Mantis 0000572: Wrong unit in 'Storage' - 'FIle system' - 'capacity' row.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 23 Aug 2012 22:06:26 +0200

openmediavault (0.3.0.21) stable; urgency=low

  * Update locales.
  * Add 'Total' column in filesystem panel.
  * Update the max. length of the filesystem label depending on the
    selected filesystem type.
  * Set ProFTPD option 'PersistentPasswd' to 'off' to work properly with NSS.
  * Mantis 0000540: Add possibility to set refresh timer for MasqueradeAddress
    in FTP service when domain is set.
